--- a/app/views/bathrooms/index.html.erb
+++ b/app/views/bathrooms/index.html.erb
@@ -1,7 +1,9 @@
+
+
 <div>
   <div>
     <h1>
-      List of all bathrooms
+      Find a bathroom near me
     </h1>
   </div>
 </div>
@@ -9,97 +11,100 @@
 <hr>
 
 <div>
-  <div>
-    <h2>
-      Add a new bathroom
-    </h2>
+ <a href="/add_bathroom">Add a new bathroom </a>
 
-    <form action="/insert_bathroom" method="post">
-      <div>
-        <label for="address_box">
-          Address
-        </label>
-
-        <input type="text" id="address_box" name="query_address">
-      </div>
-
-      <div>
-        <label for="comment_id_box">
-          Comment
-        </label>
-
-        <input type="text" id="comment_id_box" name="query_comment_id">
-      </div>
-
-      <div>
-        <input type="checkbox" id="open_to_public_box" name="query_open_to_public" value="1">
-
-        <label for="open_to_public_box">Open to public</label>
-      </div>
-
-      <button>
-        Create bathroom
-      </button>
-    </form>
-  </div>
 </div>
 
+<div>
+  <div id="map" style='width: 800px; height: 400px;'></div>
+</div>
+
+<script>
+function initMap() {
+  // initiate a new map
+  var mapDiv = document.getElementById('map');
+  var map = new google.maps.Map(mapDiv);
+
+  // An empty bounds variable for seeding automatic zoom level (bounds of map)
+  var bounds = new google.maps.LatLngBounds();
+
+  <%  @locations.each do |place|   %>
+
+  // Make info window for this place
+  var infowindow_<%= place.fetch("id") %> = new google.maps.InfoWindow({
+    content: "<b><%= place.fetch("name") %></b>" 
+  });
+
+  // Make marker for this place
+  var marker_<%= place.fetch("id") %> = new google.maps.Marker({
+    position: {lat: <%= place.fetch("lat") %>, lng: <%= place.fetch("lng") %>},
+    map: map,
+    title: "<%= place.fetch("name") %>",
+    icon: 'http://maps.google.com/mapfiles/ms/icons/red-dot.png'
+  });
+
+  // Click to show info window
+  marker_<%= place.fetch("id") %>.addListener('click', function() {
+    infowindow_<%= place.fetch("id") %>.open(map, marker_<%= place.fetch("id") %>);
+  });
+
+  // Add this marker in map bounds
+  bounds.extend(new google.maps.LatLng(<%= place.fetch("lat") %>, <%= place.fetch("lng") %>));
+
+  <% end %>
+
+  map.fitBounds(bounds);
+};
+
+</script><script src="https://maps.googleapis.com/maps/api/js?key=[GMAPS_KEY]&callback=initMap"
+async defer></script>
+
+
+
+
+
 <hr>
+# table of bathrooms #
 <div>
   <div>
     <table border="1">
       <tr>
         <th>
-          ID
+          Name
         </th>
 
         <th>
-          Address
-        </th>
-
-        <th>
-          Comment
+          Ratings
         </th>
 
         <th>
           Open to public
         </th>
-
         <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
+          
         </th>
       </tr>
 
       <% @list_of_bathrooms.each do |a_bathroom| %>
       <tr>
         <td>
-          <%= a_bathroom.id %>
+          <%= a_bathroom.name %>
         </td>
 
         <td>
-          <%= a_bathroom.address %>
+        <% matching_ratings = Rating.where({ :bathroom_id => a_bathroom.id }) %>
+        
+        <% the_rating = matching_ratings.at(0) %>
+        <%= the_rating.overall %>
+  
         </td>
 
         <td>
-          <%= a_bathroom.comment_id %>
-        </td>
-
-        <td>
-          <%= a_bathroom.open_to_public %>
-        </td>
-
-        <td>
-          <%= time_ago_in_words(a_bathroom.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(a_bathroom.updated_at) %> ago
+        <% if a_bathroom.open_to_public == "true" %>
+          public
+        <%else%>
+          private
+          <%end%>
         </td>
 
         <td>
