--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,30 @@
   </head>
 
   <body>
+  <%if current_user !=nil %>
+    #check the cookie
+      <a href="/users/sign_out">Sign out</a>
+      <a href="/users/edit">Edit Profile</a>
+    <%else%>
+      <a href="/users/sign_up">Sign up</a>
+      <a href="/users/sign_in">Sign in</a>
+    <% end%>
+
+    </nav>
+
+    <hr>
+
+    <% if notice.present? %>
+      <div style="color: green">
+        <%= notice %>
+      </div>
+    <% end %>
+
+    <% if alert.present? %>
+      <div style="color: red">
+        <%= alert %>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
