--- a/app/views/bathrooms/insert.html.erb
+++ b/app/views/bathrooms/insert.html.erb
@@ -16,11 +16,11 @@
       </div>
 
       <div>
-        <label for="comment_id_box">
-          Comment
+        <label for="name_id_box">
+          Name
         </label>
 
-        <input type="text" id="comment_id_box" name="query_comment_id">
+        <input type="text" id="name_id_box" name="query_name">
       </div>
 
       <div>
