--- a/app/views/bathrooms/index.html.erb
+++ b/app/views/bathrooms/index.html.erb
@@ -7,12 +7,13 @@
 </div>
 
 <hr>
-
+<%=@gmaps_key%>
 <div>
  <a href="/add_bathroom">Add a new bathroom </a>
 
 </div>
 
+Your location is <%=@latitude%> and <%=@longitude%>.
 <div>
   <div id="map" style='width: 800px; height: 400px;'></div>
 </div>
@@ -54,10 +55,11 @@ function initMap() {
   map.fitBounds(bounds);
 };
 
-</script><script src="https://maps.googleapis.com/maps/api/js?key=[GMAPS_KEY]&callback=initMap"
+</script>
+
+
+<script src="https://maps.googleapis.com/maps/api/js?key=<%=@gmaps_key%>&callback=initMap"
 async defer></script>
-
-
 
 
 
@@ -90,10 +92,15 @@ async defer></script>
         </td>
 
         <td>
+        
         <% matching_ratings = Rating.where({ :bathroom_id => a_bathroom.id }) %>
         
         <% the_rating = matching_ratings.at(0) %>
-        <%= the_rating.overall %>
+        <% if the_rating != nil%>
+       <%= the_rating.overall %>
+        <% else%>
+        No reviews
+        <%end%>
   
         </td>
 
