--- a/app/views/ratings/insert.html.erb
+++ b/app/views/ratings/insert.html.erb
@@ -10,14 +10,7 @@
 
     <form action="/insert_rating/<%=@the_bathroom.id%>" method="post">
     <% if current_user != nil %>
-      <div>
-        <label for="comment_id_box">
-          Comment
-        </label>
-
-        <input type="text" id="comment_id_box" name="query_comment_id">
-      </div>
-
+    
       <div>
         <label for="cleaniness_box">
           Cleaniness
@@ -44,6 +37,48 @@
 
       <button>
         Create rating
+      </button>
+    </form>
+<% else %>
+      <p>You must <a href="/users/sign_in">sign in</a> to add a bathroom.</p>
+<% end %>
+  </div>
+</div>
+
+<div>
+  <div>
+    <h2>
+      Add a new comment
+    </h2>
+
+    <form action="/insert_comment" method="post">
+    <% if current_user != nil %>
+      <div>
+        <label for="user_id_box">
+          User
+        </label>
+
+        <input type="text" id="user_id_box" name="query_user_id">
+      </div>
+
+      <div>
+        <label for="comments_box">
+          Comments
+        </label>
+
+        <input type="text" id="comments_box" name="query_comments">
+      </div>
+
+      <div>
+        <label for="bathroom_id_box">
+          Bathroom
+        </label>
+
+        <input type="text" id="bathroom_id_box" name="query_bathroom_id">
+      </div>
+
+      <button>
+        Create comment
       </button>
     </form>
 <% else %>
