--- a/app/views/ratings/insert.html.erb
+++ b/app/views/ratings/insert.html.erb
@@ -34,51 +34,15 @@
 
         <input type="text" id="environment_box" name="query_environment">
       </div>
-
-      <button>
-        Create rating
-      </button>
-    </form>
-<% else %>
-      <p>You must <a href="/users/sign_in">sign in</a> to add a bathroom.</p>
-<% end %>
-  </div>
-</div>
-
-<div>
-  <div>
-    <h2>
-      Add a new comment
-    </h2>
-
-    <form action="/insert_comment" method="post">
-    <% if current_user != nil %>
-      <div>
-        <label for="user_id_box">
-          User
-        </label>
-
-        <input type="text" id="user_id_box" name="query_user_id">
-      </div>
-
       <div>
         <label for="comments_box">
           Comments
         </label>
 
-        <input type="text" id="comments_box" name="query_comments">
+        <textarea id="comments_box" name="query_comments"></textarea>
       </div>
-
-      <div>
-        <label for="bathroom_id_box">
-          Bathroom
-        </label>
-
-        <input type="text" id="bathroom_id_box" name="query_bathroom_id">
-      </div>
-
       <button>
-        Create comment
+        Create rating
       </button>
     </form>
 <% else %>
