--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -61,7 +61,7 @@
         </td>
 
         <td>
-          <%= a_rating.comment_id %>
+          <%= a_rating.comment %>
         </td>
 
         <td>
