--- a/app/views/bathrooms/index.html.erb
+++ b/app/views/bathrooms/index.html.erb
@@ -10,6 +10,9 @@
 
 <div>
  <a href="/add_bathroom">Add a new bathroom </a>
+  <a href="/public">Public Bathrooms </a>
+    <a href="/private">Private Bathrooms </a>
+
 
 </div>
 
